5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1649_2447.log
== TEST (2019-04-05 20:21:32) 
-- CODE:
preco = float(input("digite o preco: "))
pagamento = float(input("digite o pagamento: "))
diferenca = pagamento - preco
if(preco > pagamento)
	print("Falta",diferenca)
-- ERROR:
File "XXXX", line 4
    if(preco > pagamento)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:33:45) 
-- CODE:
preco = float(input("digite o preco: "))
pagamento = float(input("digite o pagamento: "))
diferenca = preco - pagamento
troco = pagamento - preco
if(preco > pagamento) :
	print("Falta",diferenca)
else :
	print("Troco de",troco)

	
	
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 20:33:59) 
-- CODE:
preco = float(input("digite o preco: "))
pagamento = float(input("digite o pagamento: "))
diferenca = preco - pagamento
troco = pagamento - preco
if(preco > pagamento) :
	print("Falta",diferenca)
else :
	print("Troco de",troco)

	
	
-- EXECUTION TIME:
0.165272
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 01:00:45) 
-- CODE:
preco = float(input("digite o preco: "))
pagamento = float(input("digite o pagamento: "))
diferenca = preco - pagamento
troco = pagamento - preco
if(preco > pagamento) :
	print("Falta",diferenca)
else :
	print("Troco de",troco)

	
	
-- EXECUTION TIME:
0.142499
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
